--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,15 @@
 // Navigation code here
+.navigation-div {
+    padding: 3% 0 2% 0;
+    background-color: @nav-bg;
+
+    .navigation-content {
+        margin: 0 auto;
+        max-width: 800px;
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+        justify-content: space-evenly;
+
+    }
+}
