--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,15 +1,35 @@
 // Navigation code here
 .navigation-div {
-    padding: 3% 0 2% 0;
+    padding: 1% 0 1% 0;
     background-color: @nav-bg;
+    border: 1px solid @nav-border;
 
     .navigation-content {
         margin: 0 auto;
         max-width: 800px;
         display: flex;
         flex-flow: column nowrap;
-        align-items: center;
-        justify-content: space-evenly;
+
+        div {
+            flex-grow: 1;
+            text-align: center;
+            padding-bottom: 2%;
+        }
+
+        nav {
+            width: 100%;
+            flex-grow: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            a {
+                text-decoration: none;
+                margin: 0 2%;
+                font: @river-bend;
+                color: @header-font-color;
+            }
+        }
 
     }
 }
