--- a/less/home-page.less
+++ b/less/home-page.less
@@ -7,6 +7,10 @@
       padding: 15px;
     }
 
+    img {
+      border-radius: 5px;
+    }
+
     p {
       padding:0 15px;
     }
@@ -57,6 +61,7 @@
       }
 
       .btn {
+        .button(@width: 10rem);
       }
     }
 
