--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,7 +7,7 @@
     .navigation-content {
         margin: 0 auto;
         max-width: 800px;
-        display: flex;
+        .flex-center(); 
         flex-flow: column nowrap;
 
         div {
@@ -19,9 +19,7 @@
         nav {
             width: 100%;
             flex-grow: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            .flex-center();
 
             a {
                 text-decoration: none;
