--- a/css/index.css
+++ b/css/index.css
@@ -178,6 +178,7 @@ img {
   margin: 0 auto;
   max-width: 800px;
   display: flex;
+  flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
   flex-flow: column nowrap;
@@ -191,6 +192,7 @@ img {
   width: 100%;
   flex-grow: 1;
   display: flex;
+  flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
 }
@@ -230,6 +232,16 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .home .space-images img:nth-of-type(n+2) {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
@@ -246,8 +258,25 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    display: flex;
+    flex-flow: column-reverse nowrap;
+    justify-content: center;
+    align-items: center;
+    margin: 2% 0;
+    width: 100%;
+    padding: 0;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 100%;
+    padding: 15px;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -259,19 +288,71 @@ footer {
   width: 10rem;
   height: 3rem;
   background-color: #22283A;
-  color: #F6F6F6;
+  color: white;
   text-align: center;
   padding: 1%;
   border-radius: 0.5rem;
   font-size: 2rem;
   border: 1px solid #dee2e6;
+  cursor: pointer;
+}
+.home .walk .walk-text .btn:hover {
+  background-color: white;
+  color: #22283A;
+  transition: 0.3s;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 5rem;
+    height: 5rem;
+    background-color: #22283A;
+    color: #F6F6F6;
+    text-align: center;
+    padding: 1%;
+    border-radius: 0.5rem;
+    font-size: 2rem;
+    border: 1px solid #dee2e6;
+    cursor: pointer;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .home .walk .walk-text .btn:hover {
+    background-color: #F6F6F6;
+    color: #22283A;
+    transition: 0.3s;
+  }
+}
+@media (max-width: 500px) and (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+  }
 }
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 4% 0;
+  }
+}
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img img {
+    max-width: 100%;
+    width: 95%;
+    margin: 0 2.5%;
+  }
 }
