--- a/less/home-page.less
+++ b/less/home-page.less
@@ -27,6 +27,16 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone {
+        width: 100%;
+      }
+    }
+
+    @media @phone {
+      img:nth-of-type(n+2) {
+        display: none;
+      }
     }
   }
 
@@ -49,8 +59,20 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      .flex-center(column-reverse, nowrap);
+      margin: 2% 0;
+      width: 100%;
+      padding: 0;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {
+        width: 100%;
+        padding: 15px;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -61,18 +83,34 @@
       }
 
       .btn {
-        .button(@width: 10rem);
+        .button(@width: 10rem, @color: white);
+
+        @media @phone {
+          .button(@height: 5rem);
+          .flex-center();
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 100%;
+        margin: 4% 0;
+      }
       
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
+
+        @media @phone {
+          max-width: 100%;
+          width: 95%;
+          margin: 0 2.5%;
+        }
       }
     }
   }
