--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,6 +1,7 @@
 // Mixins Here
-.flex-center() {
+.flex-center(@direction: row, @wrap: nowrap) {
     display: flex;
+    flex-flow: @direction @wrap;
     justify-content: center;
     align-items: center;
 }
@@ -15,4 +16,15 @@
     border-radius: 0.5rem;
     font-size: 2.0rem;
     border: 1px solid @main-border-color;
+    cursor: pointer;
+
+    &:hover {
+        background-color: @color;
+        color: @bgcolor;
+        transition: 0.3s;
+    }
+
+    @media @phone {
+        width: 100%;
+    }
 }
