feat: stretch - add fixed nav

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,6 +6,11 @@
     align-items: center;
 }
 
+.fixed-to-top() {
+    position: fixed;
+    top: 0;
+}
+
 .button(@width: 5rem, @height: 3rem, @bgcolor: @btn-bg-color,  @color: @wild-sand) {
     width: @width;
     height: @height;
