--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,9 @@
 // Navigation code here
 .navigation-div {
-    padding: 1% 0 1% 0;
-    background-color: @nav-bg;
+    .fixed-to-top();
+    width: 100%;
+    padding: 1% 0;
+    background-color: darken(@nav-bg, 5%);
     border: 1px solid @nav-border;
 
     .navigation-content {
