--- a/css/index.css
+++ b/css/index.css
@@ -170,8 +170,11 @@ img {
   margin: 0 auto;
 }
 .navigation-div {
-  padding: 1% 0 1% 0;
-  background-color: #F6F6F6;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 1% 0;
+  background-color: #e9e9e9;
   border: 1px solid #F1F1F1;
 }
 .navigation-div .navigation-content {
@@ -211,6 +214,14 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  margin-top: 12%;
+}
+@media (max-width: 500px) {
+  .home {
+    margin-top: 15.5%;
+  }
 }
 .home .intro h2 {
   padding: 15px;
