--- a/css/index.css
+++ b/css/index.css
@@ -367,3 +367,43 @@ footer {
     margin: 0 2.5%;
   }
 }
+.home .form-section form {
+  width: 100%;
+  margin: 4% 0;
+  padding: 1% 0;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: whitesmoke;
+  border: 1px solid gray;
+  border-radius: 10px;
+}
+.home .form-section form label {
+  padding: 2% 0;
+  size: 20rem;
+}
+.home .form-section form input {
+  max-height: 50px;
+  width: 100%;
+}
+.home .form-section form input:focus,
+.home .form-section form textarea:focus,
+.home .form-section form input[type="submit"]:focus {
+  border: 1px solid gray;
+}
+.home .form-section form input,
+.home .form-section form textarea,
+.home .form-section form select {
+  font-size: 1.6rem;
+  max-width: 400px;
+  size: 20rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 3%;
+}
+.home .form-section form input[type="submit"] {
+  max-width: 100px;
+  max-height: 30px;
+  padding: 10%;
+}
