--- a/less/home-page.less
+++ b/less/home-page.less
@@ -119,4 +119,50 @@
       }
     }
   }
+
+  .form-section {
+
+    form {
+      width: 100%;
+      margin: 4% 0;
+      padding: 1% 0;
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: space-evenly;
+      align-items: center;
+
+      background-color: whitesmoke;
+      border: 1px solid gray;
+      border-radius: 10px;
+
+      label {
+        padding: 2% 0;
+        size: 20rem;
+      }
+
+      input {
+        max-height: 50px;
+        width: 100%;
+      }
+
+      input:focus, textarea:focus, input[type="submit"]:focus {
+        border: 1px solid gray;
+      }
+
+      input, textarea, select {
+        font-size: 1.6rem;
+        max-width: 400px;
+        size: 20rem;
+        border: 1px solid black;
+        border-radius: 5px;
+        padding: 3%;
+      }
+
+      input[type="submit"] {
+        max-width: 100px;
+        max-height: 30px;
+        padding: 10%;
+      }
+    }
+  }
 }// home
