--- a/css/index.css
+++ b/css/index.css
@@ -174,7 +174,7 @@ img {
   top: 0;
   width: 100%;
   padding: 1% 0;
-  background-color: #e9e9e9;
+  background-color: #c3c3c3;
   border: 1px solid #F1F1F1;
 }
 .navigation-div .navigation-content {
