--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,7 +2,7 @@
 .navigation-div {
     .fixed-to-top();
     width: 100%;
-    padding: 1% 0;
+    padding: 10px 0;
     background-color: darken(@nav-bg, 20%);
     border: 1px solid @nav-border;
 
